--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Event Management Application"
+      content="Todo Application"
     />
     <link rel="apple-touch-icon" href="./todo.jpeg" />
     <link rel="manifest" href="./todo.jpeg" />
